[metadata]
name = easysnmp
version = 0.3.0a
description = A blazingly fast and Pythonic SNMP library based on the official Net-SNMP bindings
long_description = file: README.rst
author = Kent Coble
author_email = coblekent@gmail.com
url = https://github.com/kamakazikamikaze/easysnmp
license = BSD
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Networking
    Topic :: System :: Networking :: Monitoring

[options]
packages = easysnmp
tests_require =
    pytest-cov
    pytest-sugar
    pytest

[tool:pytest]
addopts = -s --cov=easysnmp --cov-report=term-missing
testpaths = tests

[tool:black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[flake8]
max-line-length = 88
